plugins {
	id 'maven-publish'
	alias libs.plugins.quilt.loom
}

archivesBaseName = project.archives_base_name
version = "${project.version}+${libs.versions.minecraft.get()}"
group = project.maven_group

loom {
	accessWidenerPath = file("src/main/resources/book_of_the_dead.accesswidener")
	runs {
		datagen {
			server()

			name = "Data Generation"
			runDir = "build/datagen"

			vmArg("-Dfabric-api.datagen")
			vmArg("-Dfabric-api.datagen.output-dir=${file("src/main/generated")}")
		}
	}
}

assemble.dependsOn(runDatagen)

sourceSets {
	main {
		resources {
			srcDirs += [
					"src/main/generated"
			]
		}
	}
}

repositories {
	maven {
		name "jitpack"
		url "https://jitpack.io"
	}
	maven {
		name =  "Patchouli"
		url = "https://maven.blamejared.com"
	}
	maven {
		name "rei"
		url "https://maven.shedaniel.me"
	}
	maven {
		url "<https://maven.architectury.dev/>"
	}
	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/"
	}
	jcenter()
	maven { url "https://api.modrinth.com/maven" }
	maven {
		name "reach entity attributes"
		url "https://maven.jamieswhiteshirt.com/libs-release"
	}
}

dependencies {
	minecraft libs.minecraft
	mappings variantOf(libs.quilt.mappings) { classifier 'intermediary-v2' }
	modImplementation libs.quilt.loader

	modImplementation libs.quilted.fabric.api

	modImplementation libs.satin

	//Fabric ASM
	modImplementation 'com.github.Chocohead:Fabric-ASM:v2.3'
	include 'com.github.Chocohead:Fabric-ASM:v2.3'

	//Patchouli
	modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}")

	//REI
	modLocalRuntime "dev.architectury:architectury-fabric:6.2.46"
	modImplementation("me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}")
	//modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}")

	//EMI
	modImplementation "dev.emi:emi:${project.emi_version}"

	//Reach
	modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"
	include "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"

	//Revelationary
	modImplementation "com.github.DaFuqs:Revelationary:${project.revelationary_version}"
}

processResources {
	inputs.property 'version', version

	filesMatching('quilt.mod.json') {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = 'UTF-8'
	it.options.release = 17
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17

	withSourcesJar()
}

jar {
	filesMatching('LICENSE') {
		rename '^(LICENSE.*?)(\\..*)?$', "\$1_${archivesBaseName}\$2"
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
